# demoquad

./: Cargo.toml  README.md
pallets/demoquad/: Cargo.toml
pallets/demoquad/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/identity-primitives/: Cargo.toml
pallets/identity-primitives/src/: lib.rs
pallets/simple-identity/: Cargo.toml
pallets/simple-identity/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
